--- a/style.css
+++ b/style.css
@@ -179,6 +179,27 @@
       .masonry-item {
       grid-row-end: span var(--span);
       }
+      /* .code-clean{
+        position: absolute;
+        top: 10px;
+        
+        text-align: end;
+        font-family: 'Courier New', Courier, monospace;
+        font-size: 1.875rem;
+        background-color: rgba(138, 92, 246, 0);
+        padding: 0.25rem 0.5rem;
+        border-radius: 4px;
+      } */
+       .blur-overlay {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            backdrop-filter: blur(10px);
+            -webkit-backdrop-filter: blur(10px);
+            z-index: 999;
+        }
       input[type="number"]::-webkit-inner-spin-button,
       input[type="number"]::-webkit-outer-spin-button {
       -webkit-appearance: none;
